# ProyectVisionPt1

./: .gitignore  CMakeLists.txt  README.md  mainwindow.h
Datoscsv/cortecsv/: corte_77_mask.csv  corte_77_mask_1.csv  corte_77_mask_2.csv
Datoscsv/originalcsv/: corte_77_orig.csv  corte_77_orig_1.csv  corte_77_orig_2.csv
Resultados/Estadisticas/: corte_estadisticas.txt  corte_estadisticas_1.txt  corte_estadisticas_3.txt  corte_estadisticas_5.txt  corte_estadisticas_6.txt  corte_estadisticas_7.txt  corte_estadisticas_8.txt  corte_estadisticas_9.txt
Videogenerado/: transicion.avi  video_corte_77.avi
codePython/: generarHistograma.py
codePython/env/: pyvenv.cfg
src/: mainwindow.cpp  mainwindow.h  mainwindow.ui
